loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:14: error: 'while' expected but '}' found.
}while (!crossing()) 
^Poucet2:14: error: ';' expected but 'while' found.
}while (!crossing()) 
 ^